<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StuBio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">StuBio</string>
    <string name="nav_header_subtitle">Student Development Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="student">Student</string>
    <string name="management">Development</string>
    <string name="application">Application</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="development">Development</string>
    <string name="title_activity_main_login">MainLogin</string>
    <string name="title_activity_main_sign_up">MainSignUp</string>
    <string name="title_activity_main_signup">MainSignup</string>
    <string name="signup_to_sda">SignUp to SDA</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="spinnerFS">
        <item>Student</item>
        <item>Faculty</item>
    </string-array>
    <string-array name="spinnerState">
        <item>Madhya Pradesh</item>
    </string-array>
    <string-array name="spinnerCity">
        <item>Indore</item>
        <item>Bhopal</item>
        <item>Gwalior</item>
        <item>Ujjain</item>
        <item>Sagar</item>
    </string-array>
    <string-array name="spinnerUniversity">
        <item>RGPV</item>
        <item>DAVV</item>
        <item>IIT</item>
        <item>SAGE</item>
    </string-array>
    <string-array name="spinnerCollege">
        <item>Acropolis Technical Campus</item>
        <item>AITR</item>
        <item>IES IPS</item>
        <item>LNCT</item>
        <item></item>
    </string-array>
    <string-array name="sub">
        <item>ACA</item>
        <item>PPL</item>
        <item>SEPM</item>
        <item>CN</item>
        <item>IOT</item>
    </string-array>
    <string-array name="mst">
        <item>MST 1</item>
        <item>MST 2</item>
    </string-array>
    <string name="month">Month</string>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="submit">Submit</string>
    <string name="select_state">Select State</string>
    <string name="select_affiliated_college">Select Affiliated College</string>
    <string name="select_university">Select University</string>
    <string name="or">Or</string>
    <string name="dob">DOB</string>
    <string name="already_registered_login_here">Already registered? Login here</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="website">Website</string>
    <string name="welcome_to_acropolis">Welcome to Acropolis</string>
    <string name="attendance">Attendance</string>
    <string name="student_profile">Student Profile</string>
    <string name="marks">Marks</string>
    <string name="profile">Profile</string>
    <string name="updates">Updates</string>
    <string name="bus_routes">Bus Routes</string>
    <string name="student_dashboard">Student Dashboard</string>
    <string name="existing_student">Existing Student</string>
    <string name="register_new_student">Register New Student</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="mobile">Mobile</string>
    <string name="branch">Branch</string>
    <string name="dob_ddmmyy">DOB ddmmyy</string>
    <string name="year">Year</string>
    <string name="register">Register</string>
    <string name="login_to_sda">Login to SDA</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? SignUp</string>
    <string name="username">Username</string>
    <string name="faculty">Faculty</string>
    <string name="select_account_type">Select account type</string>
    <string name="select_city">Select City</string>
    <string name="google">Google</string>
    <string name="about_us">About Us</string>
    <string name="input_error_name" />
    <string name="input_error_email_invalid" />
    <string name="input_error_password" />
    <string name="input_error_password_length" />
    <string name="input_error_phone" />
    <string name="input_error_phone_invalid" />
    <string name="input_error_email" />
    <string name="registration_success" />
    <string name="already_registered" />
    <string name="logout">Logout</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="stubio">StuBio</string>
    <string name="team_members">Team Members</string>
    <string name="arpit_pardesi">Arpit Pardesi</string>
    <string name="devansh_laad">Devansh Laad</string>
    <string name="glenn_d_souza">Glenn D\'Souza</string>
    <string name="himanshu_yadav">Himanshu Yadav</string>
</resources>